# portfolio

./: .gitignore  API_ENDPOINTS_ANALYSIS.md  CLAUDE.md  COMPOUND_INTEREST_TOOL.md  DEAD_CODE_AUDIT.md  Dockerfile  EXTENSION_IMPLEMENTATION.md  EXTENSION_PRD.md  EXTENSION_RELEASE_GUIDE.md  FEEDBACK_FEATURE.md  FINAL_FIXES_SUMMARY.md  FINANCIAL_ANALYST_AI.md  GROWTHBOOK_INTEGRATION.md  IBKR_FLEX_IMPORT.md  INTERACTIVE_BROKERS_INTEGRATION.md  LICENSE  MOBILE_FRIENDLY.md  MOBILE_UX_IMPROVEMENTS.md  Makefile  NEWS_FEED_TASKS.md  NEWS_IMPROVEMENTS_SUMMARY.md  NEWS_SIMPLIFICATION.md  NYSE_USD_ILS_FIX.md  PORTFOLIO_DATA_FLOW_REFACTORING.md  PORTFOLIO_FRONTEND_CALCULATION.md  README.md  REAL_ESTATE_PRICING.md  TAGGING_SYSTEM_IMPLEMENTATION.md  TAG_UPDATE_OPTIMIZATION.md  TASKS.md  TOPBAR_REFACTOR_SUMMARY.md  TRELLO_MIGRATION.md  USERJAM_INTEGRATION.md  USERJAM_INTEGRATION_EXAMPLES.md  USERJAM_QUICK_START.md  create_github_repo.sh  docker.sh  dump.rdb  example_ai_usage.py  migrate_trello_to_github.py  (+9 more)
backend/: CHART_MISMATCH_ISSUE.md  CHECK_SYMBOL_KEYS.md  COMPLETE_CACHING_SYSTEM.md  DATA_CORRUPTION_FIX.md  DEPLOYMENT_SUMMARY.md  FINAL_STATUS.md  FULLY_AUTOMATIC.md  HISTORICAL_PRICE_CACHING.md  HYBRID_CACHING_STRATEGY.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_FINAL_SUMMARY.md  LOGGING_CONFIGURATION.md  NO_API_CALLS_ON_RELOAD.md  QUICK_START.md  README.md  README_CACHING.md  RESTART_INSTRUCTIONS.md  TESTING_GUIDE.md  __main__.py  check_date_range.py  clean_corrupted_data.py  config.py  debug_ibit.py  debug_tase.py  demo.yaml  env.example  migrate_backfill_historical.py  populate_symbols.py  (+13 more)
(+491 files in other folders)
